--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@babel/preset-react": "^7.7.4",
     "babel-preset-react": "^6.24.1",
     "babelify": "^10.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-quill": "^1.3.3"
   }
 }
